Segunda atualização, tudo funcionando :)

--- a/index.html
+++ b/index.html
@@ -4,20 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"> 
-    <title>Criações Aleatórias</title>
+    <title>Sala de Experimentos</title>
 </head>
 <body>
+    <!-- Fundo Gradiente -->
     <div class="container"></div>
-    <h1>Reunindo as plataformas mais <span class="titulo-gradiente">peculiares</span></h1>
-    <h2><br>Nossas plataformas:</h2>
 
-    <div id="botoes-plataformas"> 
+    <!-- Título -->
+     <h1>Sala de Experimentos</h1>
+    <h2>Reunindo as plataformas mais <span class="titulo-gradiente">peculiares</span></h2>
 
-    <a href="relógio/relogio.html">
-        <button>Relógio Digital Universal</button>
-    </a>
-    
-</div>
+    <!-- Container dos Cards -->
+    <div id="container-cards">
+        
+        <!-- Card 1: Relógio Digital Universal -->
+        <div class="card">
+            <h3>Relógio Digital Universal</h3>
+            <img src="imagens/relogio.png" alt="Prévia do Relógio Digital" class="card-image">
+            <div class="card-content">
+                <ul>
+                    <li>Mostra horários de vários países em tempo real</li>
+                    <li>Fusos horários detalhados (Brasil, EUA, Japão, Reino Unido)</li>
+                    <li>Design escuro com números vermelhos brilhantes</li>
+                </ul>
+            </div>
+            <a href="relógio/relogio.html"><button>Abrir</button></a>
+        </div>
+
+        <!-- Card 2: Labirinto com Setas (vai ser adicionado depois) -->
+        <div class="card">
+            <h3>Labirinto com Setas</h3>
+            <img src="imagens/labirinto.png" alt="Prévia do Labirinto" class="card-image">
+            <div class="card-content">
+                <ul>
+                    <li>Jogo simples com setas do teclado</li>
+                    <li>5 níveis de dificuldade</li>
+                    <li>Objetivo: chegar ao fim sem tocar nas paredes</li>
+                </ul>
+            </div>
+            <a href="labirinto/labirinto.html"><button>Abrir</button></a>
+        </div>
+
+        <!-- Card 3: Conversa Amigável (vai ser adicionado depois) -->
+        <div class="card">
+            <h3>Conversa Amigável</h3>
+            <img src="imagens/dora-ai.png" alt="Prévia da Conversa Amigável" class="card-image">
+            <div class="card-content">
+                <ul>
+                    <li>Converse comigo, é muito legal!</li>
+                    <li>Diga algo e receba respostas acolhedoras</li>
+                    <li>Ideal para momentos de ansiedade ou solidão</li>
+                </ul>
+            </div>
+            <a href="Dora-AI/conversa.html"><button>Abrir</button></a>
+        </div>
+
+    </div>
 
 </body>
 </html>
