Segunda Versão Site Oficial-Responsivo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container"></div>
 
     <!-- Título -->
-     <h1>Sala de Experimentos</h1>
+     <h1>Sala de Experimentos1</h1>
     <h2>Reunindo as plataformas mais <span class="titulo-gradiente">peculiares</span></h2>
 
     <!-- Campo de Busca -->
