Terceira Versão Site Oficial

--- a/Dora-AI/conversa.html
+++ b/Dora-AI/conversa.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sala de Experimentos - Dora AI</title>
+    <title>Dora AI</title>
     <link rel="stylesheet" href="conversa.css">
 </head>
 <body>
     <div id="conteudo-principal">
         <div class="header">
             <div class="header-content">
-                <h1>Dora AI</h1>
-                <p>Sua amiga de IA para conversação simples</p>
+                <h1>Dora AI 1.3</h1>
+                <p>Sua companheira de IA</p>
             </div>
             <div class="header-buttons">
                 <button class="admin-btn" onclick="window.location.href = 'admin.html'">Admin</button>
