--- a/equipe/equipe.html
+++ b/equipe/equipe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sala de Experimentos - Equipe</title>
+    <title>Equipe</title>
     <style>
         /* Reset e base */
         * {
@@ -14,15 +14,23 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-            color: #e0e0e0;
+background: radial-gradient(
+    125% 125% at -2% 101%,
+    rgba(245, 87, 2, 1) 10.5%,
+    rgba(245, 120, 2, 1) 16%,
+    rgba(245, 140, 2, 1) 17.5%,
+    rgba(245, 170, 100, 1) 25%,
+    rgba(238, 174, 202, 1) 40%,
+    rgba(202, 179, 214, 1) 65%,
+    rgba(148, 201, 233, 1) 100%
+  );          
             min-height: 100vh;
             padding: 20px;
         }
 
         /* Container principal */
         .container {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 0 auto;
             padding: 20px;
         }
@@ -31,23 +39,34 @@
         h1 {
             text-align: center;
             font-size: 32px;
-            color: #6a5acd;
+            color: #ffffff;
             margin: 20px 0;
             text-shadow: 0 0 10px rgba(106, 90, 205, 0.3);
             animation: fadeIn 1s ease-out;
         }
 
+        /* Conteúdo da equipe */
+        .equipe-content {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 30px;
+            justify-content: center;
+        }
+
         /* Card de equipe */
         .equipe-card {
+            display: flex;
+            align-items: center;
             background: rgba(30, 30, 50, 0.8);
-            padding: 30px;
-            margin: 20px 0;
+            padding: 20px;
             border-radius: 20px;
             border: 1px solid #555;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
             backdrop-filter: blur(10px);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             animation: slideIn 0.6s ease-out;
+            max-width: 450px;
+            width: 100%;
         }
 
         .equipe-card:hover {
@@ -55,31 +74,41 @@
             box-shadow: 0 15px 40px rgba(106, 90, 205, 0.4);
         }
 
+        .perfil-imagem {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-right: 20px;
+            border: 3px solid #6a5acd;
+        }
+
+        .perfil-info {
+            flex: 1;
+        }
+
         .equipe-card h3 {
             font-size: 24px;
             color: #6a5acd;
-            margin-bottom: 10px;
-            text-align: center;
+            margin: 0 0 10px 0;
         }
 
         .equipe-card p {
-            font-size: 18px;
+            font-size: 16px;
             color: #aaa;
-            text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         /* Contatos */
         .contato {
             display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 15px 0;
+            gap: 15px;
+            margin-top: 10px;
         }
 
         .contato a {
             display: inline-block;
-            padding: 12px 24px;
+            padding: 10px 20px;
             background: linear-gradient(135deg, #6a5acd, #4b0082);
             color: white;
             text-decoration: none;
@@ -87,6 +116,7 @@
             font-weight: bold;
             transition: all 0.3s ease;
             box-shadow: 0 4px 15px rgba(106, 90, 205, 0.3);
+            font-size: 14px;
         }
 
         .contato a:hover {
@@ -101,7 +131,7 @@
             width: 200px;
             margin: 30px auto;
             padding: 14px 28px;
-            background: linear-gradient(135deg, #6a5acd, #4b0082);
+            background: linear-gradient(135deg, #000000, #000000);
             color: white;
             border: none;
             border-radius: 30px;
@@ -109,13 +139,13 @@
             font-weight: bold;
             cursor: pointer;
             transition: all 0.3s ease;
-            box-shadow: 0 6px 20px rgba(106, 90, 205, 0.4);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4)
         }
 
         .botao-voltar:hover {
             transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(106, 90, 205, 0.6);
-            background: linear-gradient(135deg, #5a4cb0, #3a006a);
+            box-shadow: 0 8px 25px rgba(50, 50, 50, 0.6);
+            background: linear-gradient(135deg, #3a3a3a, #3a006a);
         }
 
         /* Animações */
@@ -152,25 +182,35 @@
     <div class="container">
         <h1>👥 Equipe da Sala de Experimentos</h1>
 
-        <div class="equipe-card">
-            <h3>Gustavo</h3>
-            <p>Criador e Desenvolvedor Principal</p>
-            <div class="contato">
-                <a href="https://github.com/gustavo15dev" target="_blank">GitHub</a>
-                <a href="mailto:gustavo15dev@gmail.com">Email</a>
+        <div class="equipe-content">
+            <!-- Card 1: Gustavo -->
+            <div class="equipe-card">
+                <img src="../imagens/gustavo.png" alt="Foto de Gustavo" class="perfil-imagem">
+                <div class="perfil-info">
+                    <h3>Gustavo</h3>
+                    <p>Criador e Desenvolvedor Principal</p>
+                    <div class="contato">
+                        <a href="https://github.com/gustavo15dev" target="_blank">GitHub</a>
+                        <a href="mailto:gustavo15dev@gmail.com">Email</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2: Rafaela -->
+            <div class="equipe-card">
+                <img src="../imagens/rafaela.png" alt="Foto de Rafaela" class="perfil-imagem">
+                <div class="perfil-info">
+                    <h3>Rafaela de Oliveira</h3>
+                    <p>Criadora e Avaliadora da Interface do Site</p>
+                    <div class="contato">
+                        <a href="falha.html" target="_blank">GitHub</a>
+                        <a href="falha.html">Email</a>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="equipe-card">
-            <h3>Rafaela de Oliveira</h3>
-            <p>Criadora e avaliadora da interface do site</p>
-            <div class="contato">
-                <a href="https://github.com/gustavo15dev" target="_blank">GitHub</a>
-                <a href="mailto:gustavo15dev@gmail.com">Email</a>
-            </div>
-        </div>
-
-        <button class="botao-voltar" onclick="window.location.href = '../index.html'">← Voltar</button>
+        <button class="botao-voltar" onclick="window.location.href = '../index.html'">Voltar</button>
     </div>
 </body>
 </html>
