--- a/Dora-AI/conversa.html
+++ b/Dora-AI/conversa.html
@@ -4,39 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dora AI</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..24,400,0..1,0" />
     <link rel="stylesheet" href="conversa.css">
 </head>
 <body>
     <div id="conteudo-principal">
         <div class="header">
-            <div class="header-content">
-                <h1>Dora AI 1.3</h1>
-                <p>Sua companheira de IA</p>
-            </div>
-            <div class="header-buttons">
-                <button class="admin-btn" onclick="window.location.href = 'admin.html'">Admin</button>
-                <button class="voltar-btn" onclick="window.location.href = '../index.html'">← Voltar</button>
+            <div class="centralized-container header-inner">
+                <div class="header-content">
+                    <h1>Dora AI 1.3 Beta</h1>
+                    <p>Sua companheira de IA</p>
+                </div>
+                <div class="header-buttons">
+                    <button class="header-btn admin-btn" onclick="window.location.href = 'admin.html'">Admin</button>
+                    <button class="header-btn voltar-btn" onclick="window.location.href = '../index.html'">
+                        <span class="material-symbols-rounded" style="font-size: 18px;">arrow_back</span> Voltar
+                    </button>
+                </div>
             </div>
         </div>
 
-        <div id="chat-box">
-            <div class="mensagem bot">Olá! Sou a Dora AI. Como posso te ajudar?</div>
+        <div id="chat-box-container">
+             <div id="chat-box" class="centralized-container">
+                <div class="mensagem bot boas-vindas-inicial">
+                    <div class="message-content">
+                        Olá! Sou a Dora AI. Como posso te ajudar hoje? ✨
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="input-area">
-            <div id="carrossel-prompts">
-                <button class="prompt-btn" onclick="enviarPrompt('Oi')">Oi</button>
-                <button class="prompt-btn" onclick="enviarPrompt('Tudo bem?')">Tudo bem?</button>
-                <button class="prompt-btn" onclick="enviarPrompt('Me conta uma curiosidade')">Me conta uma curiosidade</button>
-                <button class="prompt-btn" onclick="enviarPrompt('Como vai?')">Como vai?</button>
-                <button class="prompt-btn" onclick="enviarPrompt('Me elogie')">Me elogie</button>
-                <button class="prompt-btn" onclick="enviarPrompt('Qual o seu nome?')">Qual o seu nome?</button>
-                <button class="prompt-btn" onclick="enviarPrompt('Me diga uma frase motivacional')">Frase motivacional</button>
-            </div>
+        <div class="input-area-container">
+            <div class="input-area centralized-container">
+                <div class="chat-input-wrapper">
+                    
+                    <div class="input-row-top">
+                        <input type="text" id="input-mensagem" placeholder="Envie uma mensagem para Dora AI..." onkeypress="if(event.key==='Enter') enviarMensagem();" autocomplete="off">
+                    </div>
 
-            <div style="display: flex; gap: 10px;">
-                <input type="text" id="input-mensagem" placeholder="Digite algo..." onkeypress="if(event.key==='Enter') enviarMensagem();">
-                <button onclick="enviarMensagem()">Enviar</button>
+                    <div class="input-row-bottom">
+                        <div class="tools-left">
+                            <button id="btn-redacao" class="function-pill-btn" onclick="alternarModoRedacao()">
+                                <span class="material-symbols-rounded icon-close">close</span>
+                                <span class="material-symbols-rounded icon-filled">menu_book</span>
+                                 Redação [EM DESENVOLVIMENTO]
+                            </button>
+                        </div>
+
+                        <button class="tool-icon-btn send-btn" onclick="enviarMensagem()" id="btn-enviar">
+                            <span class="material-symbols-rounded">arrow_upward</span>
+                        </button>
+                    </div>
+                </div>
+                
+                 <div class="disclaimer-text">Dora AI pode cometer erros. Verifique informações importantes.</div>
             </div>
         </div>
     </div>
