--- a/Dora-AI/conversa.html
+++ b/Dora-AI/conversa.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dora AI</title>
+    <meta name="description" content="Sala de Experimentos é um hub criativo com ferramentas, jogos e projetos de inteligência artificial. Acesse projetos divertidos e educativos.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..24,400,0..1,0" />
     <link rel="stylesheet" href="conversa.css">
 </head>
